SFUSA/force-app/main/default/objects/SKU__c/fields/Other_Issue__c.field-meta.xml
<CustomField>
        <fullName>Other_Issue__c</fullName>
        <label>Other Issue</label>
        <type>TextArea</type>
    </CustomField>