SFUSA/force-app/main/default/objects/SKU__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
        <fullName>Purchase_Order__c</fullName>
        <label>Purchase Order Record</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>SKUs</relationshipLabel>
        <relationshipName>SKUs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>