SFUSA/force-app/main/default/objects/SKU__c/fields/SKU_Issue__c.field-meta.xml
<CustomField>
        <fullName>SKU_Issue__c</fullName>
        <label>SKU Issue</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Issue</fullName>
                </value>
                <value>
                    <fullName>Obsolete Item</fullName>
                </value>
                <value>
                    <fullName>Wrong Plant</fullName>
                </value>
                <value>
                    <fullName>Allocation</fullName>
                </value>
                <value>
                    <fullName>Pricing (YPOU)</fullName>
                </value>
                <value>
                    <fullName>CMIR</fullName>
                </value>
                <value>
                    <fullName>Costing (YMTP)</fullName>
                </value>
                <value>
                    <fullName>Price Discrepancy</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pending Discontinuation</fullName>
                </value>
                <value>
                    <fullName>Sales Promotion</fullName>
                </value>
                <value>
                    <fullName>Incorrect Material Number Used</fullName>
                </value>
                <value>
                    <fullName>Not a Beam Suntory Product</fullName>
                </value>
                <value>
                    <fullName>item cannot be individually sold</fullName>
                </value>
                <value>
                    <fullName>Barrel SKU on multiple line PO</fullName>
                </value>
                <value>
                    <fullName>Multiple items linked to SCC</fullName>
                </value>
                <value>
                    <fullName>Carrier</fullName>
                </value>
                <value>
                    <fullName>SCC transmission error</fullName>
                </value>
                <value>
                    <fullName>Esker transmission error</fullName>
                </value>
                <value>
                    <fullName>Incorrect SCC submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>